# reposcryer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/reposcryer-cli/: Cargo.toml
crates/reposcryer-cli/src/: main.rs
crates/reposcryer-cli/tests/: cli.rs
crates/reposcryer-config/: Cargo.toml
crates/reposcryer-config/src/: lib.rs
crates/reposcryer-context/: Cargo.toml
crates/reposcryer-context/src/: lib.rs
crates/reposcryer-core/: Cargo.toml
crates/reposcryer-core/src/: lib.rs
crates/reposcryer-export/: Cargo.toml
crates/reposcryer-export/src/: lib.rs
crates/reposcryer-graph/: Cargo.toml
crates/reposcryer-graph/src/: lib.rs
crates/reposcryer-ingest/: Cargo.toml
crates/reposcryer-ingest/src/: lib.rs
crates/reposcryer-parser/: Cargo.toml
crates/reposcryer-parser/src/: lib.rs
crates/reposcryer-store/: Cargo.toml
crates/reposcryer-store/src/: lib.rs
docs/: architecture.md  configuration.md  context-pack.md  development-roadmap.md  kuzu-store.md  limitations.md  parser-design.md  roadmap.md
examples/sample-rust-project/: Cargo.toml
examples/sample-rust-project/src/: auth.rs  db.rs  main.rs
