[workspace]
members = [
    "crates/reposcryer-cli",
    "crates/reposcryer-config",
    "crates/reposcryer-core",
    "crates/reposcryer-export",
    "crates/reposcryer-graph",
    "crates/reposcryer-ingest",
    "crates/reposcryer-parser",
    "crates/reposcryer-store",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
cxx-build = "=1.0.138"
ignore = "0.4"
kuzu = "0.11.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
