[package]
name = "reposcryer-export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reposcryer-config = { path = "../reposcryer-config" }
reposcryer-core = { path = "../reposcryer-core" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
