[package]
name = "reposcryer-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
ignore.workspace = true
reposcryer-config = { path = "../reposcryer-config" }
reposcryer-core = { path = "../reposcryer-core" }
sha2.workspace = true
tempfile.workspace = true
