[package]
name = "reposcryer-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
kuzu.workspace = true
reposcryer-core = { path = "../reposcryer-core" }

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
cxx-build.workspace = true
